--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -168,62 +168,67 @@
 
     </LinearLayout>
 
+
     <LinearLayout
+        android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
         android:paddingVertical="8dp"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/viewPager">
 
         <TextView
-            android:padding="10dp"
-            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="How are you feeling today?"/>
+            android:padding="10dp"
+            android:text="How are you feeling today?"
+            android:textSize="20dp" />
 
         <LinearLayout
-            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:paddingTop="8dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:paddingHorizontal="20dp"
-            android:layout_height="wrap_content">
+            android:paddingTop="8dp">
 
             <ImageView
                 android:layout_width="0dp"
-                android:tint="#828A91"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:src="@drawable/face_smile_solid"
-                android:layout_marginEnd="8dp">
-            </ImageView>
+                android:tint="#828A91" />
 
             <ImageView
-                android:tint="#828A91"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:src="@drawable/face_meh_solid"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp">
-            </ImageView>
+                android:tint="#828A91" />
 
             <ImageView
-                android:tint="#828A91"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:src="@drawable/face_frown_solid"
-                android:layout_marginStart="8dp">
-            </ImageView>
+                android:tint="#828A91" />
 
         </LinearLayout>
 
 
-
     </LinearLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
